--- a/src/Component/Header/Header.module.css
+++ b/src/Component/Header/Header.module.css
@@ -1,11 +1,32 @@
 .header{
-    margin-top: 0;
+    
     background-color: #0000FF;
     height:100px;
+    display: flex;
 }
-.header h1{
+.logo h1{
     font-size: 55px;
     color:white;
     padding-left: 50px;
     margin-top: 1px;
+}
+.loginBlock{
+    margin-top: 20px;
+    margin-left: 1300px;
+}
+.loginBlock a{
+    font-size: 30px;
+    font-weight: bold;
+    color:white;
+    text-decoration: none;
+   
+    
+
+    
+}
+.loginBlock a:hover{
+    color:gold;
+    border:3px solid gold;
+    border-radius: 25%;
+    padding: 5px;
 }
